Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138738

Incorrect focus ring rendering

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 6.9, 6.10
    • Widgets: Styles
    • None
    • macOS
    • 11fdc715f (dev), dd68e7a6e (6.10), 80961541e (6.9), 9ad336056 (tqtc/lts-6.8), f6596801d (tqtc/lts-6.5)

      Starting with macOS 26 Tahoe several widgets (controls in AppKit) have wrong geometry of the focus ring (see screenshots). QPushButton and QComboBox are the most obvious ones.

        For Gerrit Dashboard: QTBUG-138738
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes