QMacStyle: fix focus ring rendering

Several controls have their focus ring off on macOS Tahoe:

0. Push buttons. Focus ring calculations are off because
   NSView -alignmentRectForFrame: returns a rect unchanged,
   as a result the focus ring has incorrect height and origin.y.
1. Combo boxes. Same problem as with push buttons, the difference
   is that we are using NSPopUpButton and its insets are different.
2. Radio button - the ring seems to be shifted horizontally (hOffset).
3. Check box - similar to radio button, ring needs a bit different
   hOffset/vOffset

Pick-to: 6.9 6.8 6.5
Task-number: QTBUG-138738
Change-Id: I02d551f913d3ae2a03feb02e93df00faa68ffdb7
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 11fdc715f62909459e5bd3ba1b776022856acca2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>